--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>frame differencing</title>
+	<title>iridescent puddle | ezra miller</title>
 	<style>
 		body{
 			margin: 0;
