--- a/index.html
+++ b/index.html
@@ -390,6 +390,8 @@ void main() {
 <script id="colorFs">
 uniform sampler2D texture;
 varying vec2 vUv;
+uniform float mouseX;
+uniform float mouseY;
 
 vec3 rainbow(float h) {
   h = mod(mod(h, 1.0) + 1.0, 1.0);
@@ -429,10 +431,10 @@ void main(){
   vec4 tex0 = texture2D(texture, vUv);
   vec3 hsv = rgb2hsv(tex0.rgb);
 
-  hsv.r += 0.01;
+  hsv.r += 0.0075;
   hsv.r = mod(hsv.r, 1.0);
-  hsv.g *= 1.001;
-  hsv.g = mod(hsv.g, 1.0);
+  hsv.g *= 1.0001;
+  // hsv.g = mod(hsv.g, 1.0);
   vec3 rgb = hsv2rgb(hsv); 
 
   gl_FragColor = vec4(rgb,1.0);
