--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html>
 <head>
 	<title>Iridescent Puddle | Ezra Miller</title>
+  <meta property="og:image" content="http://iridescentpuddle.com/fb.jpg">
+  <meta property="og:title" content="Iridescent Puddle">
+  <meta property="og:description" content="Iridescent Puddle by Ezra Miller. Made with WebGL.">
+  <meta property="og:url" content="http://iridescentpuddle.com/">
+  <meta property="author" content="Ezra Miller">
   <link href='http://fonts.googleapis.com/css?family=Cardo:400italic' rel='stylesheet' type='text/css'>
 	<style>
 		body{
 			margin: 0;
-      /*cursor:none;*/
 		}
     a{
       font-family: "Cardo";
@@ -13,16 +17,18 @@
       position: absolute;
       bottom: 0;
       right: 0;
-      margin: 10px;
+      margin: 15px;
       font-size: 20px;
-      border-bottom: 1px solid white;
+      border-bottom: 1px solid rgba(255,255,255,0.5);
       text-decoration: none;
-      color: white;
+      color: rgba(255,255,255,0.5);
     }
 	</style>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-<a href="http://ezramiller.biz/">Ezra Miller</a>
+<a target="_blank" href="http://ezramiller.biz/">Ezra Miller</a>
 <script id="fs" type="x-fragment/x-shader">
 uniform sampler2D texture; 
 uniform float time; // seconds
@@ -767,10 +773,7 @@ void main(){
   }
 </script>
 <script src="three.min.js"></script>
-<script src="BinaryLoader.js"></script>
 <script src="Detector.js"></script>
-<script src="OrbitControls.js"></script>
-<script src="dat.gui.min.js"></script>
 <script src="main.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
